<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/nav_host_fragment"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:defaultNavHost="true"
            app:navGraph="@navigation/nav_graph" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/try_to_guess_the_secret_word_one_letter_at_a_time"
            android:textAlignment="center"
            android:paddingVertical="15dp"/>

        <TextView
            android:id="@+id/wordToGuess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="100dp"
            android:layout_marginTop="15dp"
            android:text="@string/scrambled_word"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/correctGuessTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="100dp"
            android:text="@string/textview"
            android:textColor="#3F51B5"
            android:textSize="20sp"
            tools:text="APPLE" />

        <EditText
            android:id="@+id/userInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="100dp"
            android:ems="10"
            android:hint="@string/one_letter_only"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="150dp"
            android:text="@string/guess_letter" />


        <TextView
            android:id="@+id/incorrectGuessCounter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/incorrect_guesses"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/congratulationsDisplay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview"
            tools:text="congrats yo!"
            android:textSize="30sp"
            android:textAlignment="center"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
